--- a/.pylintrc
+++ b/.pylintrc
@@ -90,7 +90,8 @@ disable=raw-checker-failed,
         missing-function-docstring,
         missing-class-docstring,
         missing-final-newline,
-        too-few-public-methods
+        too-few-public-methods,
+        broad-except
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
