--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ pymongo = "*"
 marshmallow-dataclass = "*"
 python-dotenv = "*"
 requests-oauthlib = "*"
+dnspython = "*"
 
 [dev-packages]
 pylint = "*"
@@ -20,5 +21,6 @@ pyopenssl = "*"
 python_version = "3.8"
 
 [scripts]
-serve = "flask run --host 0.0.0.0 --cert 'adhoc'"
+serve = "flask run --host 0.0.0.0"
+serve_ssl = "flask run --host 0.0.0.0 --cert=adhoc"
 routes = "flask routes"
